--- a/6-Jwt/src/main/resources/application.properties
+++ b/6-Jwt/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=6-Jwt
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.jpa.properties.hibernate.default_schema =jwt
-spring.datasource.username=postgres
-spring.datasource.password=FrivoyuN1
+spring.application.name=
+spring.datasource.url=
+spring.jpa.properties.hibernate.default_schema =
+spring.datasource.username=
+spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql =true
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=
+spring.jpa.properties.hibernate.format_sql =
